Refactor/116 Fjernet series (#117)
