# src/Reveries.Application/BookSeries/Commands/SetBookSeries/SetBookSeriesHandler.cs
@@ -1,36 +1,0 @@
-using Mediator;
-using Microsoft.Extensions.Logging;
-using Reveries.Application.BookSeries.Interfaces;
-using Reveries.Domain.BookSeries;
-using Reveries.Domain.Works;
-
-namespace Reveries.Application.BookSeries.Commands.SetBookSeries;
-
-public sealed class SetBookSeriesHandler : ICommandHandler<SetBookSeriesCommand, WorkId>
-{
-    private readonly IBookSeriesService _bookSeriesService;
-    private readonly ILogger<SetBookSeriesHandler> _logger;
-
-    public SetBookSeriesHandler(
-        IBookSeriesService bookSeriesService,
-        ILogger<SetBookSeriesHandler> logger)
-    {
-        _bookSeriesService = bookSeriesService;
-        _logger = logger;
-    }
-
-    public async ValueTask<WorkId> Handle(SetBookSeriesCommand command, CancellationToken ct)
-    {
-        var series = Series.Create(command.SeriesName);
-
-        var workId = await _bookSeriesService.SetSeriesAsync(command.Isbn, series, command.NumberInSeries, ct);
-
-        _logger.LogDebug(
-            "Setting series '{SeriesName}' #{NumberInSeries}, for book with ISBN '{Isbn}'",
-            series.Name,
-            command.NumberInSeries,
-            command.Isbn?.Value13);
-
-        return workId;
-    }
-}
